--- a/bundle/manifests/clair.projectquay.io_indexers.yaml
+++ b/bundle/manifests/clair.projectquay.io_indexers.yaml
@@ -46,17 +46,13 @@ spec:
                 - kind
                 - name
                 type: object
+              imageOverride:
+                description: ImageOverride ...
+                type: string
             type: object
           status:
             description: IndexerStatus defines the observed state of Indexer
             properties:
-              autoscalerRef:
-                description: LocalObjectReference contains enough information to let you locate the referenced object inside the same namespace.
-                properties:
-                  name:
-                    description: 'Name of the referent. More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#names TODO: Add other useful fields. apiVersion, kind, uid?'
-                    type: string
-                type: object
               conditions:
                 description: 'Represents the observations of an Indexer''s current state. Known .status.conditions.type are: "Available", "Progressing"'
                 items:
@@ -106,24 +102,30 @@ spec:
                 x-kubernetes-list-type: map
               configVersion:
                 type: string
-              deploymentRef:
-                description: LocalObjectReference contains enough information to let you locate the referenced object inside the same namespace.
-                properties:
-                  name:
-                    description: 'Name of the referent. More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#names TODO: Add other useful fields. apiVersion, kind, uid?'
-                    type: string
-                type: object
-              serviceRef:
-                description: "ServiceReference is a reference to a Service. \n If given a choice of arbitrary URI or a ServiceReference in an API, the latter should be preferred."
-                properties:
-                  name:
-                    description: 'Name of the referent. More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#names TODO: Add other useful fields. apiVersion, kind, uid?'
-                    type: string
-                  port:
-                    description: Port ... Defaults to 443.
-                    format: int32
-                    type: integer
-                type: object
+              image:
+                type: string
+              refs:
+                description: Refs ...
+                items:
+                  description: TypedLocalObjectReference contains enough information to let you locate the typed referenced object inside the same namespace.
+                  properties:
+                    apiGroup:
+                      description: APIGroup is the group for the resource being referenced. If APIGroup is not specified, the specified Kind must be in the core API group. For any other third-party types, APIGroup is required.
+                      type: string
+                    kind:
+                      description: Kind is the type of resource being referenced
+                      type: string
+                    name:
+                      description: Name is the name of resource being referenced
+                      type: string
+                  required:
+                  - kind
+                  - name
+                  type: object
+                type: array
+                x-kubernetes-list-map-keys:
+                - name
+                x-kubernetes-list-type: map
             type: object
         type: object
     served: true
