--- a/config/crd/bases/clair.projectquay.io_indexers.yaml
+++ b/config/crd/bases/clair.projectquay.io_indexers.yaml
@@ -55,6 +55,9 @@ spec:
                 - kind
                 - name
                 type: object
+              imageOverride:
+                description: ImageOverride ...
+                type: string
             type: object
           status:
             description: IndexerStatus defines the observed state of Indexer
@@ -134,6 +137,8 @@ spec:
                 - type
                 x-kubernetes-list-type: map
               configVersion:
+                type: string
+              image:
                 type: string
               refs:
                 description: Refs ...
